--- a/BookPoolV2/BookPoolV2.csproj
+++ b/BookPoolV2/BookPoolV2.csproj
@@ -319,6 +319,52 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\categories\agriculture.png" />
+    <Content Include="img\categories\books.png" />
+    <Content Include="img\categories\cars.png" />
+    <Content Include="img\categories\children_toys.png" />
+    <Content Include="img\categories\computer_accessories.png" />
+    <Content Include="img\categories\educational_accessories.png" />
+    <Content Include="img\categories\electronics.png" />
+    <Content Include="img\categories\furniture.png" />
+    <Content Include="img\categories\gaming_consoles.png" />
+    <Content Include="img\categories\home_appliances.png" />
+    <Content Include="img\categories\home_enterntainment.png" />
+    <Content Include="img\categories\home_improvement.png" />
+    <Content Include="img\categories\men_fashion.png" />
+    <Content Include="img\categories\men_shoes.png" />
+    <Content Include="img\categories\motorcycle.png" />
+    <Content Include="img\categories\parties.png" />
+    <Content Include="img\categories\pets.png" />
+    <Content Include="img\categories\phones.png" />
+    <Content Include="img\categories\sports.png" />
+    <Content Include="img\categories\watches.png" />
+    <Content Include="img\categories\women_accessories.png" />
+    <Content Include="img\categories\women_bags.png" />
+    <Content Include="img\categories\women_beauty_products.png" />
+    <Content Include="img\categories\women_fashion.png" />
+    <Content Include="img\categories\women_shoes.png" />
+    <Content Include="img\dish.png" />
+    <Content Include="img\flags\Lebanese.png" />
+    <Content Include="img\icons\icon-128x128.png" />
+    <Content Include="img\icons\icon-144x144.png" />
+    <Content Include="img\icons\icon-152x152.png" />
+    <Content Include="img\icons\icon-192x192.png" />
+    <Content Include="img\icons\icon-384x384.png" />
+    <Content Include="img\icons\icon-512x512.png" />
+    <Content Include="img\icons\icon-72x72.png" />
+    <Content Include="img\icons\icon-96x96.png" />
+    <Content Include="img\icons\user_icon.png" />
+    <Content Include="img\location_pin.png" />
+    <Content Include="img\payment\cashondelivery.png" />
+    <Content Include="img\payment\creditcardpayment.png" />
+    <Content Include="img\payment\visa.png" />
+    <Content Include="img\product\1\1.PNG" />
+    <Content Include="img\product\1\2.PNG" />
+    <Content Include="img\product\1\3.PNG" />
+    <Content Include="img\product\1\4.PNG" />
+    <Content Include="img\product\1\5.PNG" />
+    <Content Include="img\product\1\6.PNG" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\fonts\avenir_next\AvenirNextLTPro-Bold.otf" />
