--- a/BookPoolV2/Web.config
+++ b/BookPoolV2/Web.config
@@ -11,8 +11,11 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookPoolV2-20200516053654.mdf;Initial Catalog=aspnet-BookPoolV2-20200516053654;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+
+	  <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BookPool;Persist Security Info=True;User ID=bookpool_dbUser;Password=Password@123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" />
+	  
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookPoolV2-20200516053654.mdf;Initial Catalog=aspnet-BookPoolV2-20200516053654;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
