--- a/BookPool.DataObjects/BookPool.DataObjects.csproj
+++ b/BookPool.DataObjects/BookPool.DataObjects.csproj
@@ -86,7 +86,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BookPool.edmx</DependentUpon>
     </Compile>
+    <Compile Include="EDM\Category.cs">
+      <DependentUpon>BookPool.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EDM\Condition.cs">
+      <DependentUpon>BookPool.tt</DependentUpon>
+    </Compile>
     <Compile Include="EDM\C__MigrationHistory.cs">
+      <DependentUpon>BookPool.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EDM\Language.cs">
       <DependentUpon>BookPool.tt</DependentUpon>
     </Compile>
     <Compile Include="Global\Globals.cs" />
