--- a/BookPool.DataObjects/BookPool.DataObjects.csproj
+++ b/BookPool.DataObjects/BookPool.DataObjects.csproj
@@ -98,6 +98,9 @@
     <Compile Include="EDM\Language.cs">
       <DependentUpon>BookPool.tt</DependentUpon>
     </Compile>
+    <Compile Include="EDM\UsersAddress.cs">
+      <DependentUpon>BookPool.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global\Globals.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
