--- a/BookPool.DataObjects/BookPool.DataObjects.csproj
+++ b/BookPool.DataObjects/BookPool.DataObjects.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DTO\GoogleBooksResult.cs" />
     <Compile Include="DTO\ImageLinks.cs" />
     <Compile Include="DTO\IndustryIdentifiers.cs" />
+    <Compile Include="DTO\UserCartDTO.cs" />
     <Compile Include="DTO\VolumeInfo.cs" />
     <Compile Include="EDM\AspNetRole.cs">
       <DependentUpon>BookPool.tt</DependentUpon>
@@ -96,6 +97,12 @@
       <DependentUpon>BookPool.tt</DependentUpon>
     </Compile>
     <Compile Include="EDM\Language.cs">
+      <DependentUpon>BookPool.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EDM\OrderDetail.cs">
+      <DependentUpon>BookPool.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EDM\OrderHeader.cs">
       <DependentUpon>BookPool.tt</DependentUpon>
     </Compile>
     <Compile Include="EDM\SearchForBook.cs">
