--- a/BookPoolV2/BookPool.WebApplication.csproj
+++ b/BookPoolV2/BookPool.WebApplication.csproj
@@ -458,6 +458,7 @@
     <Content Include="Views\Shared\_PartialUsersLocation.cshtml" />
     <Content Include="Views\Shared\_UsersMenu.cshtml" />
     <Content Include="Views\Shared\_SearchForBook.cshtml" />
+    <Content Include="Views\Shared\_CartBooks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
