--- a/BookPoolV2/BookPool.WebApplication.csproj
+++ b/BookPoolV2/BookPool.WebApplication.csproj
@@ -304,6 +304,7 @@
     <Content Include="Content\js\site.js" />
     <Content Include="img\bookpool-logo.png" />
     <Content Include="img\logo.png" />
+    <Content Include="img\sell-book.png" />
     <Content Include="sw.js" />
     <Content Include="Content\lib\bootstrap\dist\css\bootstrap-grid.css" />
     <Content Include="Content\lib\bootstrap\dist\css\bootstrap-grid.min.css" />
@@ -466,6 +467,7 @@
     <Content Include="Views\Shared\_CartBooks.cshtml" />
     <Content Include="Views\Account\MyProfile.cshtml" />
     <Content Include="Views\Privacy\Index.cshtml" />
+    <Content Include="Views\Home\ProductNotAvailable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
