--- a/BookPoolV2/BookPool.WebApplication.csproj
+++ b/BookPoolV2/BookPool.WebApplication.csproj
@@ -304,6 +304,7 @@
     <Content Include="Content\js\site.js" />
     <Content Include="img\bookpool-logo.png" />
     <Content Include="img\logo.png" />
+    <Content Include="img\books_not_found.jpg" />
     <Content Include="img\sell-book.png" />
     <Content Include="sw.js" />
     <Content Include="Content\lib\bootstrap\dist\css\bootstrap-grid.css" />
