--- a/BookPool.DataInterface/Web.config
+++ b/BookPool.DataInterface/Web.config
@@ -10,11 +10,12 @@
   </configSections>
 	<connectionStrings>
 
-		<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BookPool;Persist Security Info=True;User ID=bookpool_dbUser;Password=Password@123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" />
-		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookPool;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BookPool;Persist Security Info=True;User ID=bookpool_dbUser;Password=Password@123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" />
+		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookPool;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-		<!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BookPoolV2-20200516053654.mdf;Initial Catalog=aspnet-BookPoolV2-20200516053654;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
+		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
