--- a/BookPoolV2/Web.config
+++ b/BookPoolV2/Web.config
@@ -22,11 +22,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="APIUrl" value="http://localhost/BookPool.DataInterface/" />
+    <add key="BookpoolEmailAddress" value="bookpool.me@gmail.com" />
+    <add key="BookpoolEmailAddressPassword" value="AnAbach@123" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+
+	  <customErrors mode="On" defaultRedirect="~/Error">
+		  <error redirect="~/Error/NotFound" statusCode="404" />
+	  </customErrors>
   </system.web>
   <system.webServer>
     <modules>
