--- a/BookPoolV2/packages.config
+++ b/BookPoolV2/packages.config
@@ -29,4 +29,5 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="Whatsapp.NET" version="1.2.2" targetFramework="net472" />
 </packages>
