--- a/BookPool.DataInterface/BookPool.DataInterface.csproj
+++ b/BookPool.DataInterface/BookPool.DataInterface.csproj
@@ -173,6 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="bookpool_email.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
