--- a/BookPool.DataInterface/Web.config
+++ b/BookPool.DataInterface/Web.config
@@ -13,8 +13,13 @@
 		<!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS;Initial Catalog=BookPool;Persist Security Info=True;User ID=bookpool_dbUser;Password=Password@123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" />
 		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookPool;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-		<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
-		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<!--Production-->
+		<!--<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
+		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+		<!--Development-->
+		<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
+		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
 	</connectionStrings>
   <appSettings>
@@ -22,6 +27,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="BookpoolEmailAddress" value="bookpool.me@gmail.com" />
+	<add key="BookpoolEmailAddressPassword" value="AnAbach@123" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
