--- a/BookPool.DataObjects/App.Config
+++ b/BookPool.DataObjects/App.Config
@@ -5,7 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookPool;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <!--<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=BookPool;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+	  
+	  <!--Development-->
+	  <add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
