--- a/BookPool.DataInterface/Web.config
+++ b/BookPool.DataInterface/Web.config
@@ -17,11 +17,15 @@
 		<!--<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
 		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-		<!--Development-->
-		<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
-		<add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--Development-->
+    <!--<add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
+    <add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2_Dev;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-	</connectionStrings>
+    <!--Development Armenia-->
+    <add name="DefaultConnection" connectionString="data source=198.71.63.89;initial catalog=BookPoolV2_AM;persist security info=True;user id=bookpool_dbUser;password=Password@123;" providerName="System.Data.SqlClient" />
+    <add name="BookPoolEntities" connectionString="metadata=res://*/EDM.BookPool.csdl|res://*/EDM.BookPool.ssdl|res://*/EDM.BookPool.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.63.89;initial catalog=BookPoolV2_AM;persist security info=True;user id=bookpool_dbUser;password=Password@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
