--- a/BookPoolV2/Web.config
+++ b/BookPoolV2/Web.config
@@ -28,8 +28,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="APIUrl" value="http://localhost/BookPool.DataInterface/" />
+    <add key="APIUrl_Armenia" value="http://localhost/BookPool.DataInterface/" />    
     <add key="BookpoolEmailAddress" value="bookpool.me@gmail.com" />
     <add key="BookpoolEmailAddressPassword" value="AnAbach@123" />
+    <add key="APIUrl_TestCountry" value="Zambia" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
