--- a/BookPool.DataObjects/BookPool.DataObjects.csproj
+++ b/BookPool.DataObjects/BookPool.DataObjects.csproj
@@ -37,6 +37,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -55,6 +58,7 @@
     <Compile Include="DTO\GoogleBooksResult.cs" />
     <Compile Include="DTO\ImageLinks.cs" />
     <Compile Include="DTO\IndustryIdentifiers.cs" />
+    <Compile Include="DTO\IpInfo.cs" />
     <Compile Include="DTO\OrderResult.cs" />
     <Compile Include="DTO\UserCartDTO.cs" />
     <Compile Include="DTO\VolumeInfo.cs" />
